# ziggy-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-doc.yaml
examples/: parse.py  serialize.py  website.py
src/ziggy/: __init__.py  parser.py  parser_test.py  serializer.py  serializer_test.py
