[project]
name = "ziggy-python"
version = "0.0.1"
description = "Python support for the Ziggy data serialization language"
authors = [{ name = "Louis Vignoli", email = "louis.vignoli@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tree-sitter-ziggy>=0.1.0", "tree-sitter>=0.23.2"]
keywords = ["ziggy", "serialization", "data format"]
classifiers = ["Topic :: File Formats", "Topic :: Text Processing"]

[project.urls]
Homepage = "https://github.com/lvignoli/ziggy-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ziggy"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    {include-group = "doc"},
]
doc = [
    "pdoc>=15.0.4",
]

[tool.ruff.lint]
ignore = ["E741"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
